# D7039E

./: .gitignore  CMakeLists.txt  README.md  changebaud.py  development_diary  fk_testing.m  follow.py  functions.py  getinfo.py  move_wheel  moveexample.py  pingtest.py  read.py  requirements.txt  scantest.py  serial_test.py  setup.py  setup_wheel.py  test.py  test.txt  test1.py  test1.txt
3d models/: connection v1.f3z  connection v1.stl  link v1.stl  mount.stl  pincher v1.stl  sliding_bracket v1.stl
Matlab/: trackBase1.slx  trackBase1.slx.original  trackBase1.slxc
aimbot_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
code/: README.md
code/arrowhead/: aimbot_consumer.py  aimbot_provider.py  arrowhead_core_systems.py  config_template.json  consumer.py  provider.py  readme.md
code/robot/: README.md
code/robot/aimbot_ws/src/mv/: CMakeLists.txt
code/robot/aimbot_ws/src/mv/src/: cv_main.cpp  cv_main.h
fusion_files/: Base v2.stl  Base1.f3d  Driving_wheel v1.f3d  Driving_wheel v1.stl  motor_and_wheel_mount v3.stl  motor_mount_2 v3.f3d  motor_mount_2 v3.stl
meetings/: 12_aug.md  12_okt.md  12_sep.md  15_aug.md  15_okt.md  15_sep.md  17_nov.md  19_okt.md  21_aug.md  21_sep.md  22_aug.md  22_sep.md  23_nov.md  26_nov.md  28_aug.md  28_sep.md  29_okt.md  29_sep.md  30_nov.md  3_nov.md  5_nov.md  5_okt.md  7_aug.md  7_sep.md  8_aug.md  8_okt.md  8_sep.md  9th_nov.md
report/: README.md  appendix.tex  main.tex  report.tex
src/: CMakeLists.txt  config.cpp  config.h  cv_main.cpp  cv_main.h  line.py  qr_detector.cpp  qr_detector.h  vector.py
(+255 files in other folders)
